# shigotolog

./: Cargo.toml  LICENSE  README.md
.github/: release.yml
.github/workflows/: actionlint.yml  ci.yml
core/: Cargo.toml
core/src/: datetime.rs  lib.rs  repository.rs  sqlite_db.rs  task.rs
sgt/: Cargo.toml
sgt/src/: database.rs  lib.rs  main.rs  prompt.rs  subcommand.rs  table.rs  util.rs
sgt/src/subcommand/: end.rs  fix.rs  init.rs  log.rs  start.rs  task.rs
sgt/src/subcommand/task/: ls.rs  register.rs  unregister.rs
